[gd_scene load_steps=3 format=3 uid="uid://bxabo7r85w6xp"]

[ext_resource type="Theme" uid="uid://cproiw2hcmy8o" path="res://Theme/Main.tres" id="1_drovn"]
[ext_resource type="Script" path="res://Scripts/Main Menu.gd" id="1_jwnvp"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_drovn")

[node name="MainMenu" type="Control" parent="."]
anchors_preset = 0
offset_right = 1283.0
offset_bottom = 723.0
script = ExtResource("1_jwnvp")
LEVEL_FILE = "res://lvls.json"

[node name="Title" type="Label" parent="MainMenu"]
layout_mode = 0
offset_left = 2.0
offset_top = 168.0
offset_right = 1277.0
offset_bottom = 323.0
theme_type_variation = &"HeaderLarge"
text = "Break Out"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayButton" type="Button" parent="MainMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.514
anchor_top = 0.543
anchor_right = 0.514
anchor_bottom = 0.543
offset_left = -76.462
offset_top = -20.589
offset_right = 31.538
offset_bottom = 26.411
text = "Play"

[node name="QuitButton" type="Button" parent="MainMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.514
anchor_top = 0.673
anchor_right = 0.514
anchor_bottom = 0.673
offset_left = -75.462
offset_top = -20.579
offset_right = 32.538
offset_bottom = 26.421
text = "Quit"

[node name="LevelMenu" type="Control" parent="MainMenu"]
visible = false
layout_mode = 1
anchor_top = 0.459
anchor_right = 1.0
anchor_bottom = 0.459
offset_left = 116.0
offset_top = 0.142975
offset_right = -97.0
offset_bottom = 336.143
grow_horizontal = 2
grow_vertical = 2

[node name="Levels" type="HFlowContainer" parent="MainMenu/LevelMenu"]
custom_minimum_size = Vector2(1000, 0)
layout_mode = 2
anchor_left = -0.108
anchor_top = 0.286
anchor_right = 1.089
anchor_bottom = 0.286
offset_left = -0.439995
offset_top = -89.096
offset_right = -0.230103
offset_bottom = 97.904
theme_override_constants/h_separation = 50
alignment = 1

[node name="BackButton" type="Button" parent="MainMenu/LevelMenu"]
layout_mode = 2
offset_left = 470.0
offset_top = 208.0
offset_right = 580.0
offset_bottom = 261.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Back"

[connection signal="button_down" from="MainMenu/PlayButton" to="MainMenu" method="_level_menu"]
[connection signal="button_down" from="MainMenu/QuitButton" to="MainMenu" method="_quit"]
[connection signal="button_down" from="MainMenu/LevelMenu/BackButton" to="MainMenu" method="_main_menu"]
